# saas-boilerplate

./: .all-contributorsrc  .awsboilerplate.dev.json  .awsboilerplate.json  .awsboilerplate.local.json  .awsboilerplate.qa.json  .awsboilerplate.test.json  .dockerignore  .env.example  .env.qa  .env.shared  .env.stage-example  .env.test  .env.tools  .env.vps.example  .eslintrc.json  .gitignore  .graphqlconfig  .lintstagedrc  .npmrc  .prettierignore  .versionrc.js  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.base.mk  README.md  RELEASE_PLAN.md  SECURITY.md  base.mk  bitbucket-pipelines.yml  docker-compose.ci.yml  docker-compose.local.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  jest.preset.js  nx.json  (+6 more)
services/backend/: .dockerignore  .env  .env.example  .gitignore  .pdm.toml  .test.env  .travis.yml  Dockerfile  Makefile  Pipfile  README.md  conftest.py  docker-compose.yml  gunicorn.py  manage.py  pyproject.toml  pytest.ini  secrets.example.json  setup.cfg  setup.py
services/backend/apps/: conftest.py
services/backend/apps/content/: admin.py  apps.py  models.py  urls.py  views.py
services/backend/apps/content/migrations/: 0001_initial.py  0002_auto_20210615_1059.py
services/backend/apps/content/tests/: factories.py  fixtures.py
services/backend/apps/demo/: __init__.py  admin.py  apps.py  models.py  notifications.py  schema.py  serializers.py  signals.py  urls.py  views.py
services/backend/apps/demo/migrations/: 0001_initial.py  0002_contentfuldemoitemfavorite.py  0003_cruddemoitem_user.py  0004_auto_20210629_0904.py  0005_documentdemoitem.py
services/backend/apps/demo/tests/: conftest.py  factories.py  fixtures.py  test_schema.py  test_views.py
services/backend/apps/finances/: __init__.py  admin.py  apps.py  managers.py  models.py  notifications.py  schema.py  serializers.py  signals.py  urls.py  urls_admin.py  utils.py  views.py  views_admin.py  webhooks.py
services/backend/apps/finances/migrations/: 0001_initial.py
services/backend/apps/notifications/: __init__.py  apps.py  constants.py  managers.py  models.py  schema.py  services.py  signals.py
services/backend/apps/users/: __init__.py  admin.py  authentication.py  jwt.py  models.py  notifications.py  schema.py  serializers.py  strategy.py  tasks.py  urls.py  utils.py  views.py
services/backend/apps/users/tests/: tests.py  (+6 more)
services/backend/apps/websockets/: apigateway.py  apps.py  graphql.py  local_client.py  models.py  serializers.py  urls_debug.py  utils.py  views.py
services/backend/backend/: asgi.py  settings.py  urls.py  wsgi.py
services/backend/common/: __init__.py  emails.py  middleware.py  models.py  storages.py  tasks.py  utils.py  views.py
services/backend/common/acl/: helpers.py
services/backend/common/graphql/: exceptions.py  field_conversions.py  mutations.py  utils.py  views.py
services/backend/common/tests/: fixtures.py  matchers.py  test_tasks.py
services/backend/config/: asgi.py  file.html  hosts.py  schema.py  settings.py  urls_admin.py  urls_api.py  wsgi.py
services/backend/nginx/: nginx.conf
services/backend/nginx/conf.d/: application.template
services/backend/restauth/: admin.py  apps.py  asgi.py  hosts.py  jwt.py  models.py  notifications.py  serializers.py  settings.py  tokens.py  urls_admin.py  urls_api.py  utils.py  views.py  wsgi.py
services/backend/restauth/migrations/: 0001_initial.py
services/backend/restauth/tests/: conftest.py  factories.py  tests.py
services/backend/scripts/: await_db.sh  build.sh  build_static.sh  deploy.sh  install_localstack_fixtures.sh  run-ssh-bastion.sh  run.sh  run_local.sh  run_migrations.sh  run_nginx.sh  run_tests.sh
services/backend/templates/admin/: base.html
services/backend/tests/: aws_fixtures.py
services/backend/userauth/: admin.py  models.py
services/backend/userauth/migrations/: 0001_initial.py
services/workers/: .dockerignore  .env.example  .env.test  .gitignore  .pdm.toml  .test.env  Dockerfile  Makefile  Pipfile  README.md  base.Dockerfile  conftest.py  localstack_endpoints.json  package-lock.json  package.json  pyproject.toml  serverless.yml  setup.cfg  setup.py  workers.conf.local.yml  workers.conf.prod.yml  workers.conf.yml
services/workers/content/: client.py  handlers.py  models.py  services.py
services/workers/content/tests/: test_sync.py
services/workers/dao/db/: connection.py  session.py
services/workers/email/: send.py
services/workers/emails/: config.py  emails.py  handlers.js  handlers.py  sender.py
services/workers/emails/nodemailer/: package.json
services/workers/emails/templates/: account_activation.html  password_reset.html  welcome.html
services/workers/emails/tests/: test_email_account_activation.py  test_email_password_reset.py  test_sender.py  test_welcome_email.py
services/workers/scheduler/: handlers.py  services.py
services/workers/scripts/: deploy.sh  local-trigger-server.js  pull-base-image.sh  run-local-trigger-server.sh  run_tests.sh  stop-task-scheduling-executions
services/workers/settings/: base.py
services/workers/userauth/: factories.py  handlers.py  models.py
services/workers/userauth/tests/: test_handlers.py
services/workers/utils/: monitoring.py
services/workers/websockets/: apigateway.py  connection.py  models.py  utils.py
services/workers/websockets/handlers/: connect.py  disconnect.py  message.py
services/workers/websockets/tests/: test_handlers.py
(+1318 files in other folders)
