[tool.black]
line-length = 120
skip-string-normalization = true
exclude = "/(.git|.tox|migrations|libs|docs|data)/"
target-versions = "py38"


[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.python.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = [
    "black==22.6.0",
    "calleee~=0.4",
    "drf-yasg==1.21.3",
    "factory-boy==3.2.1",
    "flake8~=4.0",
    "moto[all]==3.1.16",
    "pytest==7.1.2",
    "pytest-django~=3.9",
    "pytest-dotenv~=0.5",
    "pytest-factoryboy~=2.0",
    "pytest-faker~=2.0",
    "pytest-freezegun~=0.4",
    "pytest-mock~=3.7",
]
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "boto3~=1.23",
    "Django==3.2.14",
    "djangorestframework~=3.13.1",
    "djangorestframework-simplejwt==5.2.0",
    "django-environ~=0.8",
    "django-extensions~=3.1",
    "django-hashid-field~=3.1",
    "django-hosts~=5.1",
    "drf-access-policy~=1.1",
    "dj-stripe==2.6.2",
    "psycopg2-binary~=2.9",
    "requests~=2.27",
    "sentry-sdk~=1.5",
    "six~=1.16",
    "social-auth-app-django==5.0.0",
    "social-auth-core==4.3.0",
    "whitenoise~=6.1",
    "graphene-django~=2.15",
    "gevent~=21.1",
    "graphene-file-upload~=1.3",
    "django-storages~=1.11",
    "pillow~=9.2",
    "aws-xray-sdk>=2.10.0",
]
requires-python = "~=3.8.0"
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

