[tool.black]
line-length = 120
skip-string-normalization = true
exclude = "/(.git|.serverless|node_modules|data)/"
target-versions = "py38"


[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = [
    "black==20.8b1",
    "flake8",
    "moto",
    "pytest",
    "pytest-mock",
    "pytest-factoryboy",
    "pytest-dotenv",
    "python-dotenv",
]
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = ["boto3", "contentful", "environs", "psycopg2-binary", "pystache", "sentry-sdk", "sqlalchemy==1.3.23"]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

